--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
-    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-csv": "^2.0.1",
     "react-dom": "^16.13.1",
@@ -21,7 +20,6 @@
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -57,6 +55,8 @@
     "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "prop-types": "^15.7.2",
+    "redux-logger": "^3.0.6"
   }
 }
