--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.2",
     "prop-types": "^15.7.2",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6"
   }
 }
